# preview-90c6d789-afab-4900-89d0-1bcecb379ddd

./: Cargo.toml  README.md
.github/workflows/: wasm-preview.yml
src/: lib.rs
ui/: data.slint  main.slint  screens.slint
