[package]
name = "office-thermostat"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
slint = "1.9"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"

[build-dependencies]
slint-build = "1.9"

# Trigger rebuild after fixing Slint components
